Bug 358662 - Default "Smallest readable font" not used by Kexi
Summary: Default "Smallest readable font" not used by Kexi
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: General (other bugs)
Version First Reported In: 2.9.10
Platform: Other All
: NOR minor
Target Milestone: 2.9.11
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-27 23:52 UTC by Jarosław Staniek
Modified: 2016-03-03 22:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2016-01-27 23:52:18 UTC
Where appropriate, default "Smallest readable font" not used by Kexi. Also, PropertyEditor/FontSize means pixel size, while typically it should be point size.

Reproducible: Always

Steps to Reproduce:
1. Change "Smallest readable font"  in Plasma's system settings
2. Run Kexi
3. Changes are not present


Expected Results:  
"Smallest readable font" should be used.

Font size based on resolution is a risky choice, should be removed.
Comment 1 Jarosław Staniek 2016-01-27 23:57:57 UTC
Git commit ed015764e30b17d7663e6db6f9292def5417ac28 by Jaroslaw Staniek.
Committed on 27/01/2016 at 23:53.
Pushed by staniek into branch 'calligra/2.9'.

Make the default "Smallest readable font" used by Kexi in property editor, toolbar, etc.

- keep PropertyEditor/FontSize setting for pixel size, use it properly
- add PropertyEditor/FontPointSize setting for specifying point size
- don't depend on screen resolution, it's is a risky choice

FIXED-IN:2.9.11

M  +2    -2    kexi/core/KexiView.cpp
M  +1    -1    kexi/kexiutils/SmallToolButton.cpp
M  +3    -2    kexi/kexiutils/debuggui.cpp
M  +0    -17   kexi/kexiutils/utils.cpp
M  +0    -6    kexi/kexiutils/utils.h
M  +10   -6    kexi/main/KexiMainWindow.cpp
M  +0    -1    kexi/main/KexiMainWindow_p.h
M  +2    -1    kexi/widget/relations/KexiRelationsConnection.cpp
M  +1    -1    kexi/widget/utils/kexirecordnavigator.cpp

http://commits.kde.org/calligra/ed015764e30b17d7663e6db6f9292def5417ac28
Comment 2 Jarosław Staniek 2016-02-29 23:35:38 UTC
Git commit bb8f8f4bef601aa86eb2db590490d9a0142d4a39 by Jaroslaw Staniek.
Committed on 29/02/2016 at 23:07.
Pushed by staniek into branch 'master'.

Make the default "Smallest readable font" used by Kexi in property editor, toolbar, etc.

- make it work without platform plugins
- keep PropertyEditor/FontSize setting for pixel size, use it properly
- add PropertyEditor/FontPointSize setting for specifying point size
- don't depend on screen resolution, it's is a risky choice

FIXED-IN:2.9.11

(from calligra.git ed015764e30b1)

M  +2    -2    src/core/KexiView.cpp
M  +1    -0    src/kexiutils/CMakeLists.txt
A  +76   -0    src/kexiutils/FontSettings_p.cpp     [License: LGPL (v2+)]
A  +76   -0    src/kexiutils/FontSettings_p.h     [License: LGPL (v2+)]
M  +1    -1    src/kexiutils/SmallToolButton.cpp
M  +2    -2    src/kexiutils/debuggui.cpp
M  +4    -11   src/kexiutils/utils.cpp
M  +5    -4    src/kexiutils/utils.h
M  +10   -6    src/main/KexiMainWindow.cpp
M  +0    -1    src/main/KexiMainWindow_p.cpp
M  +1    -1    src/widget/relations/KexiRelationsConnection.cpp
M  +1    -1    src/widget/utils/kexirecordnavigator.cpp

http://commits.kde.org/kexi/bb8f8f4bef601aa86eb2db590490d9a0142d4a39