Make the default "Smallest readable font" used by Kexi in property editor, toolbar, etc.

- keep PropertyEditor/FontSize setting for pixel size, use it properly
- add PropertyEditor/FontPointSize setting for specifying point size
- don't depend on screen resolution, it's is a risky choice

FIXED-IN:2.9.11
BUG:358662