kexi/core/KexiView.cpp
@@ -150,7 +150,7 @@ public:
         btn->setText(text);
         btn->setIcon(a->icon());
         QFont f(KGlobalSettings::toolBarFont());
-        f.setPixelSize(KexiUtils::smallFont().pixelSize());
+        f.setPointSizeF(KGlobalSettings::smallestReadableFont().pointSizeF());
         btn->setFont(f);
         btn->setToolTip(a->toolTip());
         btn->setWhatsThis(a->whatsThis());
@@ -241,7 +241,7 @@ KexiView::KexiView(QWidget *parent)
 
     if (parentWidget()->inherits("KexiWindow")) {
         d->topBarHWidget = new QWidget(this);
-        d->topBarHWidget->setFont(KexiUtils::smallFont());
+        d->topBarHWidget->setFont(KGlobalSettings::smallestReadableFont());
         d->mainLyr->addWidget(d->topBarHWidget);
         QHBoxLayout *topBarHLyr = new QHBoxLayout(d->topBarHWidget); //needed unless KexiFlowLayout properly handles contents margins
         topBarHLyr->setContentsMargins(0, 0, 0, 0);
