kexi/kexiutils/debuggui.cpp
@@ -31,6 +31,7 @@
 #include <ktabwidget.h>
 #include <kpushbutton.h>
 #include <kguiitem.h>
+#include <kglobalsettings.h>
 #include <kdebug.h>
 
 static DebugWindow* debugWindow = 0;
@@ -62,7 +63,7 @@ static void addKexiDBDebug(const QString& text)
 
         kexiDBDebugPage = new KexiDBDebugTreeWidget(page);
         kexiDBDebugPage->setObjectName("kexiDbDebugPage");
-        kexiDBDebugPage->setFont(KexiUtils::smallFont(kexiDBDebugPage));
+        kexiDBDebugPage->setFont(KGlobalSettings::smallestReadableFont());
         QObject::connect(btn_copy, SIGNAL(clicked()), kexiDBDebugPage, SLOT(copy()));
         QObject::connect(btn_clear, SIGNAL(clicked()), kexiDBDebugPage, SLOT(clear()));
         vbox->addWidget(kexiDBDebugPage);
@@ -115,7 +116,7 @@ static void addAlterTableActionDebug(const QString& text, int nestingLevel)
         hbox->addWidget(btn_sim);
 
         kexiAlterTableActionDebugPage = new QTreeWidget(page);
-        kexiAlterTableActionDebugPage->setFont(KexiUtils::smallFont(kexiAlterTableActionDebugPage));
+        kexiAlterTableActionDebugPage->setFont(KGlobalSettings::smallestReadableFont());
         kexiAlterTableActionDebugPage->setObjectName("kexiAlterTableActionDebugPage");
         QObject::connect(btn_clear, SIGNAL(clicked()), kexiAlterTableActionDebugPage, SLOT(clear()));
         vbox->addWidget(kexiAlterTableActionDebugPage);
