kexi/kexiutils/utils.h
@@ -199,12 +199,6 @@ KEXIUTILS_EXPORT QString fileDialogFilterString(const QString& mimeString, bool 
  but returns a list of filter strings. */
 KEXIUTILS_EXPORT QString fileDialogFilterStrings(const QStringList& mimeStrings, bool kdeFormat);
 
-/*! A global setting for minimal readable font.
- \a init is a widget that should be passed if no qApp->mainWidget() is available yet.
- The size of font is not smaller than the one returned by
- KGlobalSettings::smallestReadableFont(). */
-KEXIUTILS_EXPORT QFont smallFont(QWidget *init = 0);
-
 /*! \return a color being a result of blending \a c1 with \a c2 with \a factor1
  and \a factor1 factors: (c1*factor1+c2*factor2)/(factor1+factor2). */
 KEXIUTILS_EXPORT QColor blendedColors(const QColor& c1, const QColor& c2, int factor1 = 1, int factor2 = 1);
