kexi/main/KexiMainWindow.cpp
@@ -419,8 +419,6 @@ KexiMainWindow::KexiMainWindow(QWidget *parent)
     setupMainWidget();
     updateAppCaption();
 
-    (void)KexiUtils::smallFont(this/*init*/);
-
     if (!d->userMode) {
         setupContextHelp();
         setupPropertyEditor();
@@ -1939,10 +1937,16 @@ void KexiMainWindow::setupPropertyEditor()
 //! @todo REMOVE? d->propEditor->installEventFilter(this);
 
         KConfigGroup propertyEditorGroup(d->config->group("PropertyEditor"));
-        int size = propertyEditorGroup.readEntry("FontSize", -1);
-        QFont f(KexiUtils::smallFont());
-        if (size > 0)
-            f.setPixelSize(size);
+        QFont f(KGlobalSettings::smallestReadableFont());
+        const int pointSize = propertyEditorGroup.readEntry("FontPointSize", -1); // points are more accurate
+        if (pointSize > 0) {
+            f.setPointSize(pointSize);
+        } else {
+            const int pixelSize = propertyEditorGroup.readEntry("FontSize", -1); // compatibility with Kexi 2.x
+            if (pixelSize > 0) {
+                f.setPixelSize(pixelSize);
+            }
+        }
         d->propEditorTabWidget->setFont(f);
 
         d->enable_slotPropertyEditorVisibilityChanged = false;
